--- a/config.toml
+++ b/config.toml
@@ -1,20 +1,20 @@
 baseurl = "https://wavetweak.com"
-title = "WAVETWEAK"
+title = "Wavetweak"
 author = "Daniel Cieśliński"
 canonifyurls = true
 paginate = 3
 
 theme = "hugo-theme-lean-launch-page"
 
-googleAnalytics = "UA-123456"
+googleAnalytics = "UA-178660825-2"
 
 [params]
 tagline = "Redefining the music industry by providing cutting-edge AI algorithms."
 mailchimpURL = "//my-account.mailchimp.com/my-subscriber-url"
 
-twitter = "https://twitter.com/MyNewProduct"
-facebook = "https://facebook.com/MyNewProduct"
-instagram = "https://instagram.com/MyNewProduct"
-youtube = "https://www.youtube.com/channel/MyNewChannel"
-linkedin = "https://www.linkedin.com/company/MyNewProduct"
-github = "https://github.com/MyNewProduct"
+# twitter = "https://twitter.com/MyNewProduct"
+facebook = "https://facebook.com/wavetweak"
+instagram = "https://instagram.com/wavetweak"
+# youtube = "https://www.youtube.com/channel/MyNewChannel"
+# linkedin = "https://www.linkedin.com/company/MyNewProduct"
+github = "https://github.com/Wavetweak"
